Migrating to material

--- a/frontend/src/app/shared/components/alert/alert.component.html
+++ b/frontend/src/app/shared/components/alert/alert.component.html
@@ -1,4 +1,4 @@
-﻿<div *ngIf="alerts.length" class="container fixed-top">
+﻿<div *ngIf="alerts.length" class="container fixed-top pt-5">
     <div class="m-3">
         <div *ngFor="let alert of alerts" class="{{cssClasses(alert)}}">
             <a class="close" (click)="removeAlert(alert)">&times;</a>
