--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -19,3 +19,8 @@ a { cursor: pointer; }
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.transparent-card {
+        background: rgba(255, 255, 255, 0.75);
+}
