--- a/frontend/src/app/modules/account/login/login.component.html
+++ b/frontend/src/app/modules/account/login/login.component.html
@@ -1,32 +1,26 @@
-﻿<h3 class="card-header">Login</h3>
-<div class="card-body">
+﻿<mat-card class="transparent-card">
+    <mat-card-title class="text-center pb-2">Login</mat-card-title>
+    
+    <mat-divider></mat-divider>
+    <div class="pb-3"></div>
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
-        <div class="form-group">
-            <label>Email</label>
-            <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
-            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-                <div *ngIf="f.email.errors.required">Email is required</div>
-                <div *ngIf="f.email.errors.email">Email is invalid</div>
-            </div>
-        </div>
-        <div class="form-group">
-            <label>Password</label>
-            <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                <div *ngIf="f.password.errors.required">Password is required</div>
-            </div>
-        </div>
-        <div class="form-row">
-            <div class="form-group col">
-                <button [disabled]="loading" class="btn btn-primary">
-                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                    Login
-                </button>
-                <a routerLink="../register" class="btn btn-link">Register</a>
-            </div>
-            <div class="form-group col text-right">
-                <a routerLink="../forgot-password" class="btn btn-link pr-0">Forgot Password?</a>
-            </div>
-        </div>
+        <div>
+        <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Email</mat-label>
+            <input cdkFocusInitial matInput placeholder="Enter email" formControlName="email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+            <mat-error>Email is required</mat-error>  
+        </mat-form-field>
+    </div>
+    <div>
+        <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Password</mat-label>
+            <input matInput type="password" placeholder="Enter password" formControlName="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+            <mat-error>Password is required</mat-error>
+        </mat-form-field>
+    </div>
+        <button mat-stroked-button [disabled]="loading" class="w-100">
+            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+            Login
+        </button>
     </form>
-</div>
+</mat-card>
