Bunch of misc FE changes and moving to material components

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-﻿<div class="app-container" [ngClass]="{ 'bg-light': account }">
+﻿<div class="app-container">
 
     <!-- subnav router outlet -->
     <router-outlet name="subnav"></router-outlet>
