--- a/frontend/src/app/modules/account/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/modules/account/forgot-password/forgot-password.component.html
@@ -1,20 +1,27 @@
-﻿<h3 class="card-header">Forgot Password</h3>
-<div class="card-body">
+﻿<mat-card class="transparent-card w-300px">
+    <mat-card-title class="text-center pb-2">Forgot Password</mat-card-title>
+    
+    <mat-divider></mat-divider>
+    <div class="pb-3"></div>
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
-        <div class="form-group">
-            <label>Email</label>
-            <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
-            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-                <div *ngIf="f.email.errors.required">Email is required</div>
-                <div *ngIf="f.email.errors.email">Email is invalid</div>
-            </div>
-        </div>
-        <div class="form-group">
-            <button [disabled]="loading" class="btn btn-primary">
+        <div>
+        <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Email</mat-label>
+            <input matInput placeholder="Enter email" formControlName="email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+            <mat-error> Email is required
+            </mat-error>  
+        </mat-form-field>
+    </div>
+    <div class="row">
+        <div class=" col-lg-6 col-xs-12 pb-3">
+            <button [disabled]="loading" mat-stroked-button class="w-100">
                 <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                 Submit
             </button>
-            <a routerLink="../login" class="btn btn-link">Cancel</a>
         </div>
+        <div class="col-lg-6 col-sm-12">
+            <a mat-stroked-button routerLink="../login" href="" class="w-100">Cancel</a>
+        </div>
+    </div>
     </form>
-</div>
+</mat-card>
