--- a/frontend/src/app/layout/content/content.component.html
+++ b/frontend/src/app/layout/content/content.component.html
@@ -1,5 +1,3 @@
-<div class="p-4">
-    <div class="container">
-        <router-outlet></router-outlet>
-    </div>
-</div>
+<div class="container-xl pt-4">
+    <router-outlet></router-outlet>
+  </div>
