--- a/frontend/src/app/layout/nav/nav.component.scss
+++ b/frontend/src/app/layout/nav/nav.component.scss
@@ -1,6 +1,8 @@
 .sidenav-container {
-  height: 100%;
+  height: 100vh;
 }
+
+
 
 .sidenav {
   width: 200px;
@@ -14,4 +16,8 @@
   position: sticky;
   top: 0;
   z-index: 1;
+}
+
+.active {
+  background-color: rgba(0, 0, 0, 0.10)!important;
 }
