--- a/frontend/src/app/modules/account/register/register.component.html
+++ b/frontend/src/app/modules/account/register/register.component.html
@@ -43,9 +43,7 @@
         <mat-form-field appearance="outline" class="w-100">
             <mat-label>Password</mat-label>
             <input matInput type="password" placeholder="Enter password" formControlName="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                <div *ngIf="f.password.errors.required">Password is required</div>
-            </div>
+            <mat-error *ngIf="form.get('password').errors?.pattern">Passowrd requirements</mat-error>
           </mat-form-field>
     </div>
     <div class="form-group col-lg-6 col-xs-12">
