--- a/frontend/src/app/modules/admin/accounts/add-edit/add-edit.component.html
+++ b/frontend/src/app/modules/admin/accounts/add-edit/add-edit.component.html
@@ -1,83 +1,92 @@
-﻿<h1 *ngIf="isAddMode">Create Account</h1>
-<h1 *ngIf="!isAddMode">Edit Account</h1>
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <div class="form-row">
-        <div class="form-group col">
-            <label>Title</label>
-            <select formControlName="title" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.title.errors }">
-                <option value=""></option>
-                <option value="Mr">Mr</option>
-                <option value="Mrs">Mrs</option>
-                <option value="Miss">Miss</option>
-                <option value="Ms">Ms</option>
-            </select>
-            <div *ngIf="submitted && f.title.errors" class="invalid-feedback">
-                <div *ngIf="f.title.errors.required">Title is required</div>
-            </div>
+﻿<mat-card class="transparent-card">
+    <mat-card-title class="text-center pb-2">
+        <span *ngIf="isAddMode">Create Account</span>
+        <span *ngIf="!isAddMode">Edit Account</span>
+    </mat-card-title>
+    <mat-divider></mat-divider>
+    <div class="pb-3"></div>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+        <div class="form-row">
+            <div class="form-group col-lg-6 col-xs-12">
+                <mat-form-field appearance="outline" class="w-100">
+                    <mat-label>First name</mat-label>
+                    <input matInput placeholder="Enter first name" formControlName="firstName" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
+                </mat-form-field>
+                <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
+                    <div *ngIf="f.firstName.errors.required">First Name is required</div>
+                </div>
         </div>
-        <div class="form-group col-5">
-            <label>First Name</label>
-            <input type="text" formControlName="firstName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
-            <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
-                <div *ngIf="f.firstName.errors.required">First Name is required</div>
-            </div>
-        </div>
-        <div class="form-group col-5">
-            <label>Last Name</label>
-            <input type="text" formControlName="lastName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
+        <div class="form-group col-lg-6 col-xs-12">
+            <mat-form-field appearance="outline" class="w-100">
+                <mat-label>Last name</mat-label>
+                <input matInput placeholder="Enter last name" formControlName="lastName" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
+            </mat-form-field>
             <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
                 <div *ngIf="f.lastName.errors.required">Last Name is required</div>
             </div>
+    </div>
+</div>
+<div class="form-row">
+
+    <div class="form-group col-lg-8 col-sm-12">
+        <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Email</mat-label>
+            <input matInput placeholder="Enter email" formControlName="email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+        </mat-form-field>
+        <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+            <div *ngIf="f.email.errors.required">Email is required</div>
+            <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
         </div>
     </div>
-    <div class="form-row">
-        <div class="form-group col-7">
-            <label>Email</label>
-            <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
-            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-                <div *ngIf="f.email.errors.required">Email is required</div>
-                <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
-            </div>
-        </div>
-        <div class="form-group col">
-            <label>Role</label>
-            <select formControlName="role" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.role.errors }">
-                <option value=""></option>
-                <option value="User">User</option>
-                <option value="Admin">Admin</option>
-            </select>
-            <div *ngIf="submitted && f.role.errors" class="invalid-feedback">
-                <div *ngIf="f.role.errors.required">Role is required</div>
-            </div>
+    <div class="form-group col-lg-4 col-sm-12">
+        <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Role</mat-label>
+            <mat-select formControlName="role">
+                <mat-option></mat-option>
+              <mat-option *ngFor="let role of roles | enumToArray" [value]="role.index">
+                {{role.name}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        <div *ngIf="submitted && f.role.errors" class="invalid-feedback">
+            <div *ngIf="f.role.errors.required">Role is required</div>
         </div>
     </div>
-    <div *ngIf="!isAddMode">
-        <h3 class="pt-3">Change Password</h3>
-        <p>Leave blank to keep the same password</p>
+</div>
+<div *ngIf="!isAddMode">
+    <h3 class="pt-3">Change Password</h3>
+    <p>Leave blank to keep the same password</p>
+</div>
+<div class="form-row">
+    <div class="form-group col-lg-6 col-xs-12">
+        <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Password</mat-label>
+            <input matInput type="password" placeholder="Enter password" formControlName="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+            <mat-error *ngIf="form.get('password').errors?.pattern">Passowrd requirements</mat-error>
+          </mat-form-field>
     </div>
-    <div class="form-row">
-        <div class="form-group col">
-            <label>Password</label>
-            <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                <div *ngIf="f.password.errors.required">Password is required</div>
-                <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
-            </div>
-        </div>
-        <div class="form-group col">
-            <label>Confirm Password</label>
-            <input type="password" formControlName="confirmPassword" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
+    <div class="form-group col-lg-6 col-xs-12">
+        <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Confirm password</mat-label>
+            <input matInput type="password" placeholder="Enter password again" formControlName="confirmPassword" [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
             <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
                 <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required</div>
                 <div *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match</div>
             </div>
+          </mat-form-field>
+    </div>
+    </div>
+    <div class="row">
+
+        <div class=" col-lg-6 col-xs-12 pb-3">
+            <button [disabled]="loading" mat-stroked-button class="w-100">
+                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                Save
+            </button>
+        </div>
+        <div class="col-lg-6 col-sm-12">
+            <a mat-stroked-button routerLink="../" href="" class="w-100">Cancel</a>
         </div>
     </div>
-    <div class="form-group">
-        <button [disabled]="loading" class="btn btn-primary">
-            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-            Save
-        </button>
-        <a routerLink="/admin/accounts" class="btn btn-link">Cancel</a>
-    </div>
-</form>
+    </form>
+</mat-card>
