--- a/frontend/src/app/modules/admin/accounts/list/list.component.html
+++ b/frontend/src/app/modules/admin/accounts/list/list.component.html
@@ -1,6 +1,6 @@
 ﻿<h1>Accounts</h1>
 <p>All accounts from secure (admin only) api end point:</p>
-<a routerLink="add" class="btn btn-sm btn-success mb-2">Create Account</a>
+<!-- <a routerLink="add" class="btn btn-sm btn-success mb-2">Create Account</a>
 <table class="table table-striped">
     <thead>
         <tr>
@@ -29,4 +29,62 @@
             </td>
         </tr>
     </tbody>
-</table>
+</table> -->
+
+
+<mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input #input matInput placeholder="Ex. Mia" #input>
+  </mat-form-field>
+  
+  <div class="mat-elevation-z3">
+
+    <table mat-table [dataSource]="dataSource" matSort>
+  
+      <!-- ID Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+      </ng-container>
+  
+      <!-- Progress Column -->
+      <ng-container matColumnDef="firstName">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <td mat-cell *matCellDef="let row">  {{row.firstName}} {{row.lastName}} </td>
+      </ng-container>
+  
+      <!-- Name Column -->
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+        <td mat-cell *matCellDef="let row"> {{row.email}} </td>
+      </ng-container>
+  
+      <!-- Color Column -->
+      <ng-container matColumnDef="role">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Role </th>
+        <td mat-cell *matCellDef="let row"> {{row.role}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="actionsColumn">
+        <th mat-header-cell *matHeaderCellDef><a mat-stroked-button routerLink="add/" class="btn btn-sm btn-primary mr-1">Create Account</a>
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <a mat-stroked-button routerLink="edit/{{row.id}}" class="btn btn-sm btn-primary mr-1">Edit</a>
+          <button mat-stroked-button (click)="deleteAccount(row.id)" class="btn btn-sm btn-danger btn-delete-account" [disabled]="row.isDeleting">
+            <span *ngIf="row.isDeleting" class="spinner-border spinner-border-sm"></span>
+            <span *ngIf="!row.isDeleting">Delete</span>
+        </button>
+        </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  
+      <!-- Row shown when there is no matching data. -->
+      <!-- <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr> -->
+    </table>
+  
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  </div>
