Working server side pagination

--- a/frontend/src/app/modules/admin/accounts/add-edit/add-edit.component.html
+++ b/frontend/src/app/modules/admin/accounts/add-edit/add-edit.component.html
@@ -85,7 +85,7 @@
             </button>
         </div>
         <div class="col-lg-6 col-sm-12">
-            <a mat-stroked-button routerLink="../" href="" class="w-100">Cancel</a>
+            <a mat-stroked-button routerLink="../../" href="" class="w-100">Cancel</a>
         </div>
     </div>
     </form>
