--- a/frontend/src/app/modules/admin/accounts/list/list.component.html
+++ b/frontend/src/app/modules/admin/accounts/list/list.component.html
@@ -34,12 +34,12 @@
 
 <mat-form-field>
     <mat-label>Filter</mat-label>
-    <input #input matInput placeholder="Ex. Mia" #input>
+    <input #input matInput placeholder="Ex. Mia">
   </mat-form-field>
   
   <div class="mat-elevation-z3">
 
-    <table mat-table [dataSource]="dataSource" matSort>
+    <table mat-table [dataSource]="data" matSort>
   
       <!-- ID Column -->
       <ng-container matColumnDef="id">
@@ -86,5 +86,5 @@
       </tr> -->
     </table>
   
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+    <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   </div>
