--- a/frontend/src/app/modules/admin/accounts/list/list.component.html
+++ b/frontend/src/app/modules/admin/accounts/list/list.component.html
@@ -1,45 +1,13 @@
 ﻿<h1>Accounts</h1>
-<p>All accounts from secure (admin only) api end point:</p>
-<!-- <a routerLink="add" class="btn btn-sm btn-success mb-2">Create Account</a>
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th style="width:30%">Name</th>
-            <th style="width:30%">Email</th>
-            <th style="width:30%">Role</th>
-            <th style="width:10%"></th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let account of accounts">
-            <td>{{account.title}} {{account.firstName}} {{account.lastName}}</td>
-            <td>{{account.email}}</td>
-            <td>{{account.role}}</td>
-            <td style="white-space: nowrap">
-                <a routerLink="edit/{{account.id}}" class="btn btn-sm btn-primary mr-1">Edit</a>
-                <button (click)="deleteAccount(account.id)" class="btn btn-sm btn-danger btn-delete-account" [disabled]="account.isDeleting">
-                    <span *ngIf="account.isDeleting" class="spinner-border spinner-border-sm"></span>
-                    <span *ngIf="!account.isDeleting">Delete</span>
-                </button>
-            </td>
-        </tr>
-        <tr *ngIf="!accounts">
-            <td colspan="4" class="text-center">
-                <span class="spinner-border spinner-border-lg align-center"></span>
-            </td>
-        </tr>
-    </tbody>
-</table> -->
-
 
 <mat-form-field>
     <mat-label>Filter</mat-label>
-    <input #input matInput placeholder="Ex. Mia">
+    <input matInput (keyup)="applyFilter($event)">
   </mat-form-field>
   
   <div class="mat-elevation-z3">
 
-    <table mat-table [dataSource]="data" matSort>
+    <table mat-table [dataSource]="dataSource" matSort>
   
       <!-- ID Column -->
       <ng-container matColumnDef="id">
@@ -65,12 +33,12 @@
         <td mat-cell *matCellDef="let row"> {{row.role}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="actionsColumn">
-        <th mat-header-cell *matHeaderCellDef><a mat-stroked-button routerLink="add/" class="btn btn-sm btn-primary mr-1">Create Account</a>
+      <ng-container matColumnDef="actions" justify="end">
+        <th mat-header-cell  *matHeaderCellDef><a mat-raised-button routerLink="add/" class="mr-1">Create Account</a>
         </th>
         <td mat-cell *matCellDef="let row">
-          <a mat-stroked-button routerLink="edit/{{row.id}}" class="btn btn-sm btn-primary mr-1">Edit</a>
-          <button mat-stroked-button (click)="deleteAccount(row.id)" class="btn btn-sm btn-danger btn-delete-account" [disabled]="row.isDeleting">
+            <a mat-raised-button routerLink="edit/{{row.id}}" color="primary" class="mr-1">Edit</a>
+          <button mat-raised-button (click)="deleteAccount(row.id)"color="warn" [disabled]="row.isDeleting">
             <span *ngIf="row.isDeleting" class="spinner-border spinner-border-sm"></span>
             <span *ngIf="!row.isDeleting">Delete</span>
         </button>
@@ -81,10 +49,18 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   
       <!-- Row shown when there is no matching data. -->
-      <!-- <tr class="mat-row" *matNoDataRow>
+      <tr class="mat-row" *matNoDataRow>
         <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-      </tr> -->
+      </tr>
     </table>
+
+    <div *ngIf="isLoadingResults" 
+   style="display: flex; justify-content: center; align-items: center; background: white;">
+  <mat-progress-spinner 
+    color="primary" 
+    mode="indeterminate">
+  </mat-progress-spinner>
+</div>
   
-    <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   </div>
