--- a/frontend/src/app/modules/admin/projects/list/list.component.scss
+++ b/frontend/src/app/modules/admin/projects/list/list.component.scss
@@ -1,8 +1,12 @@
-
 table {
-    width: 100%;
-  }
-  
-  th.mat-sort-header-sorted {
-    color: black;
-  }
+  width: 100%;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
+}
+
+td, th {
+  width: 20%;
+}
