Mostly converted to material. Some form validaitons need to be fixed yet. Good enough for now

--- a/frontend/src/app/modules/account/reset-password/reset-password.component.html
+++ b/frontend/src/app/modules/account/reset-password/reset-password.component.html
@@ -1,34 +1,48 @@
-﻿<h3 class="card-header">Reset Password</h3>
-<div class="card-body">
+﻿<mat-card class="transparent-card">
+  <mat-card-title class="text-center pb-2">Reset Password</mat-card-title>
+  <mat-divider></mat-divider>
+  <mat-card-content class="pt-3">
     <div *ngIf="tokenStatus == TokenStatus.Validating">
         Validating token...
-    </div>
-    <div *ngIf="tokenStatus == TokenStatus.Invalid">
-        Token validation failed, if the token has expired you can get a new one at the <a routerLink="../forgot-password">forgot password</a> page.
-    </div>
+      </div>
+      <div *ngIf="tokenStatus == TokenStatus.Invalid">
+        Token validation failed, if the token has expired you can get a new one at the <a
+          routerLink="../forgot-password">forgot password</a> page.
+      </div>
     <form *ngIf="tokenStatus == TokenStatus.Valid" [formGroup]="form" (ngSubmit)="onSubmit()">
-        <div class="form-group">
-            <label>Password</label>
-            <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                <div *ngIf="f.password.errors.required">Password is required</div>
-                <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
-            </div>
-        </div>
-        <div class="form-group">
-            <label>Confirm Password</label>
-            <input type="password" formControlName="confirmPassword" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
-            <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
-                <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required</div>
-                <div *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match</div>
-            </div>
-        </div>
-        <div class="form-group">
-            <button [disabled]="loading" class="btn btn-primary">
-                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                Reset Password
+      <div class="form-group">
+        <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Password</mat-label>
+            <input matInput type="password" placeholder="Enter password" formControlName="password"
+              [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+            <mat-error *ngIf="form.get('password').errors?.minlength">Passowrd must be 6 or more charecters</mat-error>
+          </mat-form-field>
+      </div>
+      <div class="form-group">
+        <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Confirm password</mat-label>
+            <input matInput type="password" placeholder="Enter password again" formControlName="confirmPassword"
+              [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
+          </mat-form-field>
+          <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
+            <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required</div>
+            <div *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match</div>
+          </div>
+      </div>
+      <div class="form-group">
+
+        <div class="row">
+          <div class=" col-12 pb-3">
+            <button [disabled]="loading" mat-stroked-button class="w-100">
+              <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+              Reset Password
             </button>
-            <a routerLink="../login" class="btn btn-link">Cancel</a>
+          </div>
+          <div class="col-12">
+            <a mat-stroked-button routerLink="../login" href="" class="w-100">Cancel</a>
+          </div>
         </div>
+      </div>
     </form>
-</div>
+  </mat-card-content>
+</mat-card>
