--- a/frontend/src/app/modules/account/register/register.component.html
+++ b/frontend/src/app/modules/account/register/register.component.html
@@ -1,73 +1,74 @@
 ﻿<mat-card class="transparent-card">
-    <mat-card-title class="text-center pb-2">Register</mat-card-title>
-    <mat-divider></mat-divider>
-    <div class="pb-3"></div>
-    <form [formGroup]="form" (ngSubmit)="onSubmit()">
-        <div class="form-row">
-            <div class="form-group col-lg-6 col-xs-12">
-                <mat-form-field appearance="outline" class="w-100">
-                    <mat-label>First name</mat-label>
-                    <input matInput placeholder="Enter first name" formControlName="firstName" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
-                </mat-form-field>
-                <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
-                    <div *ngIf="f.firstName.errors.required">First Name is required</div>
-                </div>
-        </div>
-        <div class="form-group col-lg-6 col-xs-12">
-            <mat-form-field appearance="outline" class="w-100">
-                <mat-label>Last name</mat-label>
-                <input matInput placeholder="Enter last name" formControlName="lastName" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
-            </mat-form-field>
-            <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
-                <div *ngIf="f.lastName.errors.required">Last Name is required</div>
-            </div>
-    </div>
-</div>
-<div class="form-row">
-
-    <div class="form-group col-12">
+  <mat-card-title class="text-center pb-2">Register</mat-card-title>
+  <mat-divider></mat-divider>
+  <div class="pb-3"></div>
+  <form [formGroup]="form" (ngSubmit)="onSubmit()">
+    <div class="form-row">
+      <div class="form-group col-lg-6 col-xs-12">
         <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Email</mat-label>
-            <input matInput placeholder="Enter email" formControlName="email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+          <mat-label>First name</mat-label>
+          <input matInput placeholder="Enter first name" formControlName="firstName"
+            [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
+        </mat-form-field>
+        <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
+          <div *ngIf="f.firstName.errors.required">First Name is required</div>
+        </div>
+      </div>
+      <div class="form-group col-lg-6 col-xs-12">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Last name</mat-label>
+          <input matInput placeholder="Enter last name" formControlName="lastName"
+            [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
+        </mat-form-field>
+        <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
+          <div *ngIf="f.lastName.errors.required">Last Name is required</div>
+        </div>
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-12">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Email</mat-label>
+          <input matInput placeholder="Enter email" formControlName="email"
+            [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
         </mat-form-field>
         <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-            <div *ngIf="f.email.errors.required">Email is required</div>
-            <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
+          <div *ngIf="f.email.errors.required">Email is required</div>
+          <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
         </div>
+      </div>
     </div>
-</div>
-   
-
-<div class="form-row">
-    <div class="form-group col-lg-6 col-xs-12">
+    <div class="form-row">
+      <div class="form-group col-lg-6 col-xs-12">
         <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Password</mat-label>
-            <input matInput type="password" placeholder="Enter password" formControlName="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-            <mat-error *ngIf="form.get('password').errors?.pattern">Passowrd requirements</mat-error>
-          </mat-form-field>
-    </div>
-    <div class="form-group col-lg-6 col-xs-12">
+          <mat-label>Password</mat-label>
+          <input matInput type="password" placeholder="Enter password" formControlName="password"
+            [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+          <mat-error *ngIf="form.get('password').errors?.pattern">Passowrd requirements</mat-error>
+        </mat-form-field>
+      </div>
+      <div class="form-group col-lg-6 col-xs-12">
         <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Confirm password</mat-label>
-            <input matInput type="password" placeholder="Enter password again" formControlName="confirmPassword" [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
-            <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
-                <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required</div>
-                <div *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match</div>
-            </div>
-          </mat-form-field>
-    </div>
+          <mat-label>Confirm password</mat-label>
+          <input matInput type="password" placeholder="Enter password again" formControlName="confirmPassword"
+            [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
+        </mat-form-field>
+        <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
+            <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required</div>
+            <div *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match</div>
+          </div>
+      </div>
     </div>
     <div class="row">
-
-        <div class=" col-lg-6 col-xs-12 pb-3">
-            <button [disabled]="loading" mat-stroked-button class="w-100">
-                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                Register
-            </button>
-        </div>
-        <div class="col-lg-6 col-sm-12">
-            <a mat-stroked-button routerLink="../login" href="" class="w-100">Cancel</a>
-        </div>
+      <div class=" col-lg-6 col-xs-12 pb-3">
+        <button [disabled]="loading" mat-stroked-button class="w-100">
+          <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+          Register
+        </button>
+      </div>
+      <div class="col-lg-6 col-sm-12">
+        <a mat-stroked-button routerLink="../login" href="" class="w-100">Cancel</a>
+      </div>
     </div>
-    </form>
+  </form>
 </mat-card>
