Update background image for landing page

--- a/frontend/src/app/layout/landing/landing.component.scss
+++ b/frontend/src/app/layout/landing/landing.component.scss
@@ -5,7 +5,7 @@
 // these classes were causing issues for the content on the page
 .full-background {
     height: calc(100vh);
-    background-image: url("https://mdbootstrap.com/img/Photos/Horizontal/Nature/full page/img(11).jpg");
+    background-image: url("https://images.pexels.com/photos/443446/pexels-photo-443446.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
