Add cards with flexlayout for overview

--- a/frontend/src/app/modules/admin/overview/overview.component.html
+++ b/frontend/src/app/modules/admin/overview/overview.component.html
@@ -1,4 +1,22 @@
-﻿
-        <h1>Admin</h1>
-        <p>This section can only be accessed by administrators.</p>
-        <p><a routerLink="accounts">Manage Accounts</a></p>
+﻿<h1>Admin Dashboard</h1>
+
+
+<mat-divider></mat-divider><br>
+<div fxLayout="row wrap" fxLayout.lt-xs="column" fxLayoutAlign="space-evenly start">
+  <mat-card class="dashboard-card mt-3">
+    <mat-card-title>Accounts</mat-card-title>
+    <mat-divider></mat-divider>
+    <mat-card-content class="p-3">
+      <a mat-raised-button color="primary" class="my-3" routerLink="accounts/list/all">View all accounts</a>
+      <a mat-raised-button color="primary" class="my-3" routerLink="accounts/add">Create account</a>
+    </mat-card-content>
+  </mat-card>
+  <mat-card class="dashboard-card mt-3">
+    <mat-card-title>Projects</mat-card-title>
+    <mat-divider></mat-divider>
+    <mat-card-content class="p-3">
+      <a mat-raised-button color="primary" class="my-3" routerLink="projects">View all projects</a>
+      <a mat-raised-button color="primary" class="my-3" routerLink="projects/add">Create project</a>
+    </mat-card-content>
+  </mat-card>
+</div>
