Small changes. bug fixing

--- a/frontend/src/app/modules/admin/accounts/add-edit/add-edit.component.html
+++ b/frontend/src/app/modules/admin/accounts/add-edit/add-edit.component.html
@@ -85,7 +85,7 @@
             </button>
         </div>
         <div class="col-lg-6 col-sm-12">
-            <button mat-stroked-button class="w-100" (click)="onCancel()">Cancel</button>
+            <button mat-stroked-button class="w-100" (click)="onCancel($event)">Cancel</button>
         </div>
     </div>
     </form>
