--- a/frontend/src/app/modules/admin/accounts/list/list.component.html
+++ b/frontend/src/app/modules/admin/accounts/list/list.component.html
@@ -60,7 +60,7 @@
       <th mat-header-cell *matHeaderCellDef><a mat-raised-button routerLink="add/" class="mr-1">Create Account</a>
       </th>
       <td mat-cell *matCellDef="let row">
-        <a mat-raised-button routerLink="edit/{{row.id}}" color="primary" class="mr-1">Edit</a>
+        <a mat-raised-button routerLink="../../edit/{{row.id}}" color="primary" class="mr-1">Edit</a>
         <button mat-raised-button (click)="deleteAccount(row.id)" color="warn" [disabled]="row.isDeleting">
           <span *ngIf="row.isDeleting" class="spinner-border spinner-border-sm"></span>
           <span *ngIf="!row.isDeleting">Delete</span>
