--- a/frontend/src/app/layout/nav/nav.component.html
+++ b/frontend/src/app/layout/nav/nav.component.html
@@ -24,7 +24,7 @@
         (click)="clickHandler()" 
         class="nav-item nav-link"
         >
-        <mat-icon>build</mat-icon><span>&nbsp;Locations</span>
+        <mat-icon>here</mat-icon><span>&nbsp;Locations</span>
       </a>
         <a  
         mat-list-item 
