--- a/frontend/src/app/layout/nav/nav.component.html
+++ b/frontend/src/app/layout/nav/nav.component.html
@@ -24,16 +24,6 @@
         (click)="clickHandler()" 
         class="nav-item nav-link"
         >
-        <mat-icon>here</mat-icon><span>&nbsp;Locations</span>
-      </a>
-        <a  
-        mat-list-item 
-        routerLink="/locations" 
-        routerLinkActive="active" 
-        [routerLinkActiveOptions]="{exact: true}" 
-        (click)="clickHandler()" 
-        class="nav-item nav-link"
-        >
         <mat-icon>work</mat-icon><span>&nbsp;Employees</span>
       </a>
       <a  
@@ -65,9 +55,19 @@
         (click)="clickHandler()" 
         class="nav-item nav-link"
         >
+        <mat-icon>here</mat-icon><span>&nbsp;Locations</span>
+      </a>
+      <a  
+      mat-list-item 
+      routerLink="/locations/list/all" 
+      routerLinkActive="active" 
+      [routerLinkActiveOptions]="{exact: true}" 
+      (click)="clickHandler()" 
+      class="nav-item nav-link"
+      >
         <mat-icon>schedule</mat-icon><span>&nbsp;Time Cards</span>
       </a>
-      </div>
+      </div>  
     <mat-divider *ngIf="isHandset$ | async"></mat-divider>
     <a 
     *ngIf="isHandset$ | async"
