--- a/frontend/src/app/modules/admin/overview/overview.component.html
+++ b/frontend/src/app/modules/admin/overview/overview.component.html
@@ -19,4 +19,12 @@
       <a mat-raised-button color="primary" class="my-3" routerLink="projects/add">Create project</a>
     </mat-card-content>
   </mat-card>
+  <mat-card class="dashboard-card mt-3">
+    <mat-card-title>Notes</mat-card-title>
+    <mat-divider></mat-divider>
+    <mat-card-content class="p-3">
+      <a mat-raised-button color="primary" class="my-3" routerLink="notes">View all notes</a>
+      <a mat-raised-button color="primary" class="my-3" routerLink="notes/add">Create note</a>
+    </mat-card-content>
+  </mat-card>
 </div>
