--- a/frontend/src/app/modules/admin/locations/list/list.component.html
+++ b/frontend/src/app/modules/admin/locations/list/list.component.html
@@ -1,1 +1,6 @@
-<p>list works!</p>
+<h1>Locations</h1> 
+
+<mat-form-field>
+    <mat-label></mat-label>
+    <input placeholder="Just a placeholder">
+  </mat-form-field>
