--- a/frontend/src/app/modules/admin/overview/overview.component.html
+++ b/frontend/src/app/modules/admin/overview/overview.component.html
@@ -23,7 +23,7 @@
     <mat-card-title>Locations</mat-card-title>
     <mat-divider></mat-divider>
     <mat-card-content class="p-3">
-      <a mat-raised-button color="primary" class="my-3" routerLink="locations">View locations</a>
+      <a mat-raised-button color="primary" class="my-3" routerLink="locations">View all locations</a>
       <a mat-raised-button color="primary" class="my-3" routerLink="locations/add">Create locations</a>
     </mat-card-content>
   </mat-card>
