--- a/frontend/src/app/modules/admin/locations/list/list.component.html
+++ b/frontend/src/app/modules/admin/locations/list/list.component.html
@@ -1,5 +1,79 @@
 <h1>Locations</h1>
-  <mat-form-field>
-    <mat-label>Filter</mat-label>
-    <input #input matInput (keyup)="applyFilter($event)">
-  </mat-form-field>
+<div class="row">
+    <div class="col-lg-6 col-xs-12">
+      <mat-form-field appearance="fill">
+        <mat-label>Location Type</mat-label>
+        <mat-select [(value)]="selected">
+          <mat-option value="all">
+            All Locations
+          </mat-option>
+          <mat-option value="User">
+            Locations by zipcode
+          </mat-option>
+          <mat-option value="Admin">
+            Locations out of state
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="col-lg-6 col-xs-12">
+      <mat-form-field>
+        <mat-label>Filter</mat-label>
+        <input #input matInput (keyup)="applyFilter($event)">
+      </mat-form-field>
+    </div>
+  </div>
+
+
+  <div class="mat-elevation-z3">
+
+    <table mat-table [dataSource]="dataSource" matSort>
+  
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
+          <td mat-cell *matCellDef="let project"> {{locations.id}} </td>
+        </ng-container>
+      
+        <ng-container matColumnDef="title">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
+          <td mat-cell *matCellDef="let project"> {{locations.addressLine1}} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="description">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
+          <td mat-cell *matCellDef="let project"> {{locations.addressLine2}} </td>
+        </ng-container>
+
+
+          <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef><a mat-raised-button routerLink="add/" class="mr-1">Add Locations</a>
+            </th>
+            <td mat-cell *matCellDef="let row">
+              <a mat-raised-button routerLink="edit/{{row.id}}" color="primary" class="mr-1">Edit</a>
+              <button mat-raised-button (click)="deleteAccount(row.id)"color="warn" [disabled]="row.isDeleting">
+                <span *ngIf="row.isDeleting" class="spinner-border spinner-border-sm"></span>
+                <span *ngIf="!row.isDeleting">Delete</span>
+            </button>
+            </td>
+          </ng-container>
+      
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      
+          <!-- Row shown when there is no matching data. -->
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+          </tr>
+        </table>
+    
+      <div *ngIf="isLoadingResults" 
+        style="display: flex; justify-content: center; align-items: center; background: white;">
+       <mat-progress-spinner 
+         color="primary" 
+         mode="indeterminate">
+       </mat-progress-spinner>
+     </div>
+      
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+      </div>
+
