--- a/frontend/src/app/modules/admin/notes/add-edit/add-edit.component.html
+++ b/frontend/src/app/modules/admin/notes/add-edit/add-edit.component.html
@@ -15,9 +15,9 @@
                     <input matInput placeholder="Enter Description" formControlName="description">
             </mat-form-field>
             <mat-radio-group aria-label="Select an option" formControlName="visibility">
-                <mat-radio-button value="public">Public</mat-radio-button>
-                <mat-radio-button value="private">Private</mat-radio-button>
-                <mat-radio-button value="protected">Protected</mat-radio-button>
+                <mat-radio-button value="Public">Public</mat-radio-button>
+                <mat-radio-button value="Private">Private</mat-radio-button>
+                <mat-radio-button value="Protected">Protected</mat-radio-button>
             </mat-radio-group>
             <mat-form-field appearance="outline" class="w-100">
                 <mat-label>Note Body</mat-label>
