--- a/frontend/src/app/modules/admin/projects/list/list.component.html
+++ b/frontend/src/app/modules/admin/projects/list/list.component.html
@@ -17,9 +17,11 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
       <td mat-cell *matCellDef="let project"> {{project.title}} </td>
     </ng-container>
+    
+    
 
     <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
       <td mat-cell *matCellDef="let project"> {{project.description}} </td>
     </ng-container>
 
