--- a/frontend/src/app/modules/admin/locations/map-dialog/map-dialog.component.html
+++ b/frontend/src/app/modules/admin/locations/map-dialog/map-dialog.component.html
@@ -1,4 +1,1 @@
-<agm-map [latitude]="mapInfo.lat" [longitude]="mapInfo.lng">
-    <agm-marker [latitude]="mapInfo.lat" [longitude]="mapInfo.lng">
-    </agm-marker>
-</agm-map>
+<agm-map [latitude]="mapInfo.lat" [longitude]="mapInfo.lng"></agm-map>
