--- a/frontend/src/app/layout/nav/nav.component.html
+++ b/frontend/src/app/layout/nav/nav.component.html
@@ -20,7 +20,7 @@
         mat-list-item 
         routerLink="/projects" 
         routerLinkActive="active" 
-        [routerLinkActiveOptions]="{exact: true}" 
+        [routerLinkActiveOptions]="{exact: false}" 
         (click)="clickHandler()" 
         class="nav-item nav-link"
         >
