Updated API key

--- a/frontend/src/app/modules/admin/locations/map-dialog/map-dialog.component.html
+++ b/frontend/src/app/modules/admin/locations/map-dialog/map-dialog.component.html
@@ -1,1 +1,7 @@
-<agm-map [latitude]="mapInfo.lat" [longitude]="mapInfo.lng"></agm-map>
+
+<h1>Maps</h1>
+<agm-map [latitude]="mapInfo.lat" [longitude]="mapInfo.lng">
+    <agm-marker [latitude]="mapInfo.lat" [longitude]="mapInfo.lng">
+    </agm-marker>
+</agm-map>
+
