not clean logic, but good enough for presentation

--- a/frontend/src/app/modules/admin/locations/add-edit/add-edit.component.html
+++ b/frontend/src/app/modules/admin/locations/add-edit/add-edit.component.html
@@ -1,5 +1,1 @@
-<mat-card class="transparent-card">
-    <mat-card-title class="text-center pb-2">
-        <span *ngIf="isAddMode">Create Location</span>
-        <span *ngIf="!isAddMode">Edit Location</span>
-    </mat-card-title>
+<h1>Location Edit</h1>
